Added Lucide links to each page title

--- a/web/templates/add_client.html
+++ b/web/templates/add_client.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="card">
-    <h2>Add New Client</h2>
+    <h2><i data-lucide="plus" style="width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Add New Client</h2>
     <p style="color: #5B6571; margin-top: 0.5rem; margin-bottom: 2rem;">Create a new client record</p>
     
     <form method="post" data-file-number-format="{{ file_number_format }}">
