--- a/web/templates/manage_types.html
+++ b/web/templates/manage_types.html
@@ -159,7 +159,7 @@
 <div class="card">
     <div class="header-row">
         <div>
-            <h2>Client Types</h2>
+            <h2><i data-lucide="tag" style="width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Manage Client Types</h2>
             <p style="color: #5B6571; margin-top: 0.5rem;">Manage client types for filtering and organization</p>
         </div>
         <a href="{{ url_for('types.add_type') }}" class="btn-add">Add Type</a>
