--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -68,7 +68,7 @@ details[open] .settings-section-header .arrow {
 
 {% block content %}
 <div class="card">
-    <h2>Settings</h2>
+    <h2><i data-lucide="sliders-horizontal" style="width: 28px; height: 28px; vertical-align: -4px; margin-right: 0.5rem;"></i>Settings</h2>
     <p style="color: #5B6571; margin-top: 0.5rem; margin-bottom: 2rem;">Customize your EdgeCase experience</p>
     
     <div id="success-message" class="success-message">
