--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -45,8 +45,8 @@
         <a href="{{ url_for('ledger.ledger') }}" class="nav-btn teal">
             <i data-lucide="wallet" style="width: 16px; height: 16px; vertical-align: -2px; margin-right: 0.35rem;"></i>Ledger
         </a>
-        <a href="{{ url_for('billing') }}" class="nav-btn purple">
-            <i data-lucide="file-text" style="width: 16px; height: 16px; vertical-align: -2px; margin-right: 0.35rem;"></i>Billing
+        <a href="{{ url_for('statements.outstanding_statements') }}" class="nav-btn purple">
+            <i data-lucide="file-text" style="width: 16px; height: 16px; vertical-align: -2px; margin-right: 0.35rem;"></i>Statements
         </a>
     </div>
 </div>
